force-app/main/default/objects/APXTConga4__Connected_App_Setting__mdt/APXTConga4__Connected_App_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Connected App Setting</label>
    <pluralLabel>Connected App Settings</pluralLabel>
</CustomObject>