force-app/main/default/objects/APXTConga4__Connected_App_Setting__mdt/fields/APXTConga4__Connected_App_Name__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Connected_App_Name__c</fullName>
    <label>Connected App Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>