force-app/main/default/objects/APXTConga4__Connected_App_Setting__mdt/fields/APXTConga4__Connected_App_Name_SF1__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Connected_App_Name_SF1__c</fullName>
    <defaultValue>&quot;Conga_Composer_SF1_EU&quot;</defaultValue>
    <label>Connected App Name SF1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>